[tool.poetry]
name = "refextract"
version = "0.1.0"
description = "Small library for extracting references used in scholarly communication."
readme = "README.rst"
homepage = "https://github.com/inspirehep/refextract"
license = "GPL-2.0-or-later"
authors = [
    "CERN <admin@inspirehep.net>"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.11,<4"
PyPDF2 = ">=1.26.0,~=1.0"
six = ">=1.10.0,~=1.0"
unidecode = ">=1.0.22,~=1.0"
Flask = ">=2.0.3"
webargs = "<=5.4.0"
prometheus-flask-exporter = ">=0.20.1,~=0.20"
gunicorn = "^23.0.0"
python-magic = "^0.4.27"
inspire-utils = "^3.0.61"
requests = "^2.32.3"
urllib3 = "1.26.12"


[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
responses ="^0.10.15"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.coverage.run]
include = ["refextract/*.py"]

[tool.pytest.ini_options]
addopts = "--cov=refextract --cov-report=term-missing:skip-covered"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
